--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "tower-param-validator",
   "version": "0.0.1",
-  "main": "./index.js"
+  "main": "./index.js",
+  "dependencies": {
+    "tower-operator": "*"
+  }
 }
