--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tower-param-validator",
+  "name": "tower-param",
   "version": "0.0.1",
   "main": "./index.js",
   "dependencies": {
