--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "tower-param",
-  "version": "0.0.1",
+  "version": "0.5.0pre",
   "main": "./index.js",
   "dependencies": {
-    "tower-emitter": "*",
-    "tower-validator": "*",
-    "tower-type": "*",
+    "tower-emitter": "~0.5.0pre",
+    "tower-validator": "~0.5.0pre",
+    "tower-type": "~0.5.0pre",
     "part-is-array": "*"
   }
 }
