--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "tower-param",
-  "version": "0.1.0pre",
+  "version": "0.1.0",
   "main": "./index.js",
   "dependencies": {
-    "tower-emitter": "~0.1.0pre",
-    "tower-validator": "~0.1.0pre",
-    "tower-type": "~0.1.0pre",
+    "tower-emitter": "~0.1.0",
+    "tower-validator": "~0.1.0",
+    "tower-type": "~0.1.0",
     "part-is-array": "*"
+  },
+  "repository": {
+    "type" : "git",
+    "url" : "http://github.com/tower/param.git"
   }
 }
