--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "tower-param",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "main": "./index.js",
   "dependencies": {
-    "tower-emitter": "~0.1.0",
-    "tower-validator": "~0.1.0",
-    "tower-type": "~0.1.0",
+    "tower-emitter": "*",
+    "tower-validator": "*",
+    "tower-type": "*",
     "part-is-array": "*"
   },
   "repository": {
